--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -133,9 +133,9 @@
                         <label class="control-label col-xs-4" for="inputHealth">Зд:</label>
 
                         <div class="input-group col-xs-8" id="inputHealth">
-                            <input type="text" class="form-control" placeholder="от"/>
+                            <input id="minHealth" type="text" class="form-control" placeholder="от"/>
                             <span class="input-group-addon"> - </span>
-                            <input type="text" class="form-control" placeholder="до"/>
+                            <input id="maxHealth" type="text" class="form-control" placeholder="до"/>
                         </div>
                     </div>
                     <div class="form-group row">
