--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -77,7 +77,8 @@
         </div>
         <ul class="nav navbar-nav">
             <li><a href="/new/admin">Новости</a></li>
-            <li><a href="/new/admin/country">Страны</a></li>
+            <li><a href="/new/admin/countries">Страны</a></li>
+            <li><a href="/new/admin/users">Пользователи</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Логин</a></li>
