- Added team links - Introduced new entities - Middle progress in all parser

--- a/src/main/resources/templates/admin/countries.html
+++ b/src/main/resources/templates/admin/countries.html
@@ -57,16 +57,16 @@
                 url: '/new/admin/country',
                 type: 'PUT',
                 success: function(result) {
-                    window.location.href='/new/admin/country';
+                    window.location.href='/new/admin/countries';
                 }
             });
         });
         $('#update-countries').click(function () {
             $.ajax({
-                url: '/new/admin/country/download',
+                url: '/new/admin/countries/download',
                 type: 'POST',
                 success: function(result) {
-                    window.location.href='/new/admin/country';
+                    window.location.href='/new/admin/countries';
                 }
             });
             $("#update-countries").remove();
