--- a/src/main/resources/templates/teams.html
+++ b/src/main/resources/templates/teams.html
@@ -6,7 +6,7 @@
 <div class="container">
     <img id="logo" src="/images/jlogo.png"/>
 
-    <div th:replace="main::mainmenu ('transfer')"/>
+    <div th:replace="main::mainmenu ('teams')"/>
     <h3>Команды</h3>
 
     <div class="well">
