--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -96,6 +96,8 @@
                         <li th:attr="class=((${pageType} eq 'news') ? 'active' : '')"><a href="/">Новости</a></li>
                         <li th:attr="class=((${pageType} eq 'transfer') ? 'active' : '')"><a
                                 href="/transfer">Трансфер</a></li>
+                        <li th:attr="class=((${pageType} eq 'teams') ? 'active' : '')"><a
+                                href="/teams">Команды</a></li>
                         <li><a href="/komandy">Видео матчей</a></li>
                         <li><a href="/gallery">Фото</a></li>
                         <li><a href="/poleznoe">Интересно</a></li>
