--- a/src/main/resources/templates/admin/images.html
+++ b/src/main/resources/templates/admin/images.html
@@ -1,14 +1,74 @@
-<div class="panel pane-default">
-    <div class="panel-body">
-        <table class="table table-bordered" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-               xmlns:th="http://www.thymeleaf.org">
-            <tr th:each="image : ${images}">
-                <td th:text="${image.id}">1</td>
-                <td th:text="${image.name.length() > 20} ? ${image.name.substring(0, 20) + '...'} : ${image.name}">1.jpg</td>
-                <td><img src="/images/upload/1.jpg" th:attr="src=${image.getPath()},alt=${image.name}"
-                         alt="1.jpg" class="img-thumbnail center-block" style="height:140px;"></td>
-                <td><a th:attr="id=${'delete-photo-' + image.id}" id="delete-photo-1" href="#">Удалить</a></td>
-            </tr>
-        </table>
+<!DOCTYPE html>
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
+      layout:decorate="~{admin-layout}">
+<head>
+    <title>Фото</title>
+</head>
+<body>
+<nav layout:fragment="adminmenu" th:remove="tag">
+    <div th:replace="main::adminnav('images')"/>
+</nav>
+<h2 layout:fragment="main-title">Загрузка фото</h2>
+<div layout:fragment="main-content">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <input id="fileupload" type="file" name="files[]" data-url="/new/admin/image/upload" multiple>
+
+            <div class="progress" id="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                     aria-valuemax="100"
+                     style="width: 0%;"></div>
+            </div>
+        </div>
     </div>
+    <div id="photos"></div>
 </div>
+<div layout:fragment="script-after" th:remove="tag">
+    <script>
+        function updatePhotos() {
+            skip = getUrlParameter("skip");
+            u = '/new/admin/photos';
+            if (skip != undefined) {
+                u += '?skip=';
+                u += skip;
+            }
+            $.ajax({
+                url: u,
+                success: function (data) {
+                    $('#photos').html(data);
+                    $('a[id^="delete-photo-"]').click(function () {
+                        var cur_id = $(this).attr('id').substr(13);
+                        $.ajax({
+                            url: '/new/admin/images/' + cur_id,
+                            method: 'DELETE',
+                            success: function (data) {
+                                updatePhotos();
+                            }
+                        });
+                    })
+                }
+            });
+        }
+        $(document).ready(function () {
+            $('#fileupload').fileupload({
+                progressall: function (e, data) {
+                    var progress = parseInt(data.loaded / data.total * 100, 10);
+                    $('#progress .progress-bar').css(
+                            'width',
+                            progress + '%'
+                    );
+                },
+
+                done: function () {
+                    updatePhotos();
+                }
+            });
+            updatePhotos();
+        });
+    </script>
+    <script src="/js/jquery-ui.js"></script>
+    <script src="/js/jquery.fileupload.js"></script>
+    <script src="/js/jquery.iframe-transport.js"></script>
+</div>
+</body>
+</html>
